--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-<html data-wf-page="63936f5636563119b13c7fc0" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
+<html data-wf-page="63936f563656319d113c7fb2" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
 
 <head>
     <style>
@@ -32,7 +32,7 @@
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
     <meta name="twitter:image" content="https://www.digipants.com/website.png">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
@@ -95,128 +95,73 @@
                     style="opacity: 0; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
             </div>
         </div>
-        <div id="Top" class="inner-hero-section wf-section">
+        <div id="Top" class="inner-hero-login wf-section">
             <div class="gradients-bg">
-                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
+                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1.00956, 1.00956, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
                     class="gradient-circle-pink"></div>
-                <div style="transform: translate3d(0px, 0px, 0px) scale3d(2.17456, 2.17456, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
+                <div style="transform: translate3d(0px, 0px, 0px) scale3d(2.17768, 2.17768, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
                     class="gradient-circle-blue"></div>
-                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1.01526, 1.01526, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
+                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1.00319, 1.00319, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
                     class="gradient-circle-purple"></div>
-                <div style="transform: translate3d(0px, 0px, 0px) scale3d(0.994912, 0.994912, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
+                <div style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
                     class="gradient-circle-yellow"></div>
             </div>
             <div class="content-wrapper w-container">
-                <div class="hero-inner-box">
-                    <div class="hero-inner-padding">
+                <div class="sign-in">
+                    <div class="hero-sign-in">
                         <div class="max-540-pixels">
-                            <div>
+                            <div class="hidden">
                                 <div class="center-content">
                                     <div>
-                                        <div class="mini-pic support"
-                                            style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;">
-                                        </div>
-                                        <h1 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
-                                            class="hero-inner-text">Services</h1>
+                                        <div class="mini-pic guy"></div>
+                                        <h1 class="hero-inner-text small">Register</h1>
                                     </div>
                                 </div>
-                                <div>
-                                    <p style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
-                                        class="hero-subtitle">Find all our Services here...</p>
+                                <div class="hidden">
+                                    <p class="hero-subtitle">Fill up this form to Register</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div><a href="#Intro"
-                style="transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
-                class="scroll-down bottom w-inline-block w--current">
-                <div class="scroll-down-box"><img
-                        src="https://www.digipants.com/63238e717124a8c9a4c94e41/63239dd22e1f31ab5addb98c_Scroll.png"
-                        loading="lazy" width="28" alt="" class="scroll-down-arrow"
-                        style="transform: translate3d(0px, 9.8752px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;">
-                </div>
-            </a>
-        </div>
-        <div id="Intro" class="content-section services wf-section">
-            <div class="content-wrapper w-container">
-                <div class="inner-wrapper">
-                    <div class="w-dyn-list">
-                        <div role="list" class="w-dyn-items">
-                            <div role="listitem" class="service-item w-dyn-item">
-                                <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
-                                        href="/service/web-development.html" class="link-preview w-inline-block"><img
-                                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
-                                            loading="lazy" width="585.5"
-                                            srcset="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="">
-                                        <div style="background-image:url(&quot;https://www.digipants.com/632622573bb4e8a1d6504d34/632c97774f0a31be911a48a7_firmbee-com-gcsNOsPEXfs-unsplash.jpg&quot;)"
-                                            class="change-hover-image"></div>
-                                    </a></div>
-                                <div class="service-rigth-box">
-                                    <div><a href="/service/web-development.html" class="preview-link-big">Website Design
-                                            & Develoment</a>
-                                        <div class="paragraph-box _5-pixels">
-                                            <p>Build a unique Website with DigiPants' skilled developers</p>
-                                        </div>
-                                        <div class="paragraph-box"><a href="/service/web-development.html"
-                                                class="cost">46500INR /month</a></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div role="listitem" class="service-item w-dyn-item">
-                                <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
-                                        href="/service/social-media.html" class="link-preview w-inline-block"><img
-                                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
-                                            loading="lazy" width="585.5"
-                                            srcset="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="">
-                                        <div style="background-image:url(&quot;https://www.digipants.com/632622573bb4e8a1d6504d34/632c9c3d5ae0db3ee4e2bf10_jason-goodman-vbxyFxlgpjM-unsplash.jpg&quot;)"
-                                            class="change-hover-image"></div>
-                                    </a></div>
-                                <div class="service-rigth-box">
-                                    <div><a href="/service/social-media.html" class="preview-link-big">Social Media
-                                            Marketing</a>
-                                        <div class="paragraph-box _5-pixels">
-                                            <p>We can marketize your website and it's conent on social media platforms
-                                            </p>
-                                        </div>
-                                        <div class="paragraph-box"><a href="/service/social-media.html"
-                                                class="cost">36500INR /month</a></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div role="listitem" class="service-item w-dyn-item">
-                                <div class="service-left"><a data-w-id="62f7afb6-a5f3-13ca-ee75-6564a0b0c679"
-                                        href="/service/search-engine-optimization"
-                                        class="link-preview w-inline-block"><img
-                                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
-                                            loading="lazy" width="585.5"
-                                            srcset="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="">
-                                        <div style="background-image:url(&quot;https://www.digipants.com/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash.jpg&quot;)"
-                                            class="change-hover-image"></div>
-                                    </a></div>
-                                <div class="service-rigth-box">
-                                    <div><a href="/service/search-engine-optimization" class="preview-link-big">Search
-                                            Engine Optimization</a>
-                                        <div class="paragraph-box _5-pixels">
-                                            <p>Let our team optimize your website content for search engine to crawl
-                                                easily</p>
-                                        </div>
-                                        <div class="paragraph-box"><a href="/service/search-engine-optimization"
-                                                class="cost">26500INR /month</a></div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="w-form">
+                        <form action="/register" id="email-form" name="email-form" data-name="Email Form" method="POST"
+                            aria-label="Email Form">
+                            <label for="name" class="field-label">Name</label>
+                            <input type="text" class="sing-in-field w-input" maxlength="256" name="name"
+                                data-name="Name" placeholder="Name" id="name" required="">
+                            <label for="email" class="field-label dark">Email Address</label>
+                            <input type="email" class="sing-in-field w-input" maxlength="256" name="email"
+                                data-name="Email" placeholder="Email" id="email" required="">
+                            <input type="submit" value="Submit" data-wait="Please wait..."
+                                class="sign-in-button w-button">
+                        </form>
+                        <div class="w-form-done" tabindex="-1" role="region" aria-label="Email Form success">
+                            <div>Thank you! You are registered, Please login with your credentials.</div>
                         </div>
-                        <div role="navigation" aria-label="List" class="w-pagination-wrapper"></div>
+                        <div class="w-form-fail" tabindex="-1" role="region" aria-label="Email Form failure">
+                            <div>Oops! Something went wrong while submitting the form.</div>
+                        </div>
+                    </div>
+                    <div class="more-buttons">
+                        <div class="bottom-margin"><a href="#" class="log-in-button w-inline-block">
+                                <div class="flex"><img
+                                        src="https://www.digipants.com/63238e717124a8c9a4c94e41/6329d55a9758cda4ce67c12a_google%20(1).png"
+                                        loading="lazy" width="24" alt="" class="login-icon">
+                                    <div>Sign In with Google</div>
+                                </div>
+                            </a></div><a href="#" class="log-in-button w-inline-block">
+                            <div class="flex"><img
+                                    src="https://www.digipants.com/63238e717124a8c9a4c94e41/6329d6240efdb5433c2f5554_facebook%20(1).png"
+                                    loading="lazy" width="24" alt="" class="login-icon">
+                                <div>Sign In with Facebook</div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div><a href="#Top" data-w-id="b14332a4-73fa-3289-cc4d-f2edc8c4e3d9"
             style="opacity: 0; display: none; transform: translate3d(0px, 130%, 0px) scale3d(0.2, 0.2, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-            class="go-up-button w-inline-block"></a>
+            class="go-up-button w-inline-block w--current"></a>
         <div class="footer wf-section">
             <div class="gradients-bg">
                 <div class="gradient-circle-pink"
@@ -371,7 +316,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63238e717124a8c9a4c94e41"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="js/app.js" type="text/javascript"></script>
+    <script src="/js/app.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
