--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4778,7 +4778,7 @@ blockquote {
 }
 
 .change-this-image.team-6 {
-    background-image: url("https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639627de610f54107d149_Team_6.webp");
+    background-image: url("https://www.digipants.com/assets/adi (1).png");
     background-size: contain;
 }
 
