--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -151,6 +151,7 @@ button,
 html input[type="button"],
 input[type="reset"] {
     -webkit-appearance: button;
+    appearance: button;
     cursor: pointer
 }
 
@@ -181,7 +182,8 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 input[type='search'] {
-    -webkit-appearance: none
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 input[type='search']::-webkit-search-cancel-button,
@@ -231,7 +233,6 @@ th {
 [class^="w-icon-"],
 [class*=" w-icon-"] {
     font-family: 'digipants-icons' !important;
-    speak: none;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
@@ -336,7 +337,8 @@ html.w-mod-touch * {
 }
 
 input.w-button {
-    -webkit-appearance: button
+    -webkit-appearance: button;
+    appearance: button;
 }
 
 html[data-w-dynpage] [data-w-cloak] {
@@ -397,8 +399,6 @@ html[data-w-dynpage] [data-w-cloak] {
     text-transform: inherit;
     list-style-type: disc;
     text-shadow: none;
-    font-smoothing: auto;
-    vertical-align: baseline;
     cursor: inherit;
     white-space: inherit;
     word-break: normal;
@@ -529,7 +529,8 @@ button,
 [type='reset'] {
     border: 0;
     cursor: pointer;
-    -webkit-appearance: button
+    -webkit-appearance: button;
+    appearance: button;
 }
 
 .w-form {
@@ -566,7 +567,6 @@ label {
     font-size: 14px;
     line-height: 1.42857143;
     color: #333333;
-    vertical-align: middle;
     background-color: #ffffff;
     border: 1px solid #cccccc
 }
@@ -1313,7 +1313,6 @@ textarea.w-select {
     background: #dddddd;
     clear: both;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    tap-highlight-color: rgba(0, 0, 0, 0)
 }
 
 .w-slider-mask {
@@ -1349,7 +1348,6 @@ textarea.w-select {
     height: 40px;
     text-align: center;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    tap-highlight-color: rgba(0, 0, 0, 0)
 }
 
 .w-slider-nav.w-round>div {
@@ -1418,7 +1416,6 @@ textarea.w-select {
     color: white;
     font-size: 40px;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -1587,11 +1584,13 @@ textarea.w-select {
     z-index: 2000;
     outline: 0;
     opacity: 0;
+    user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     -webkit-tap-highlight-color: transparent;
-    -webkit-transform: translate(0, 0)
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
 }
 
 .w-lightbox-backdrop,
@@ -1731,7 +1730,8 @@ textarea.w-select {
     padding: 2vh 1vh;
     box-sizing: content-box;
     cursor: pointer;
-    -webkit-transform: translate3d(0, 0, 0)
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
 
 .w-lightbox-active {
@@ -2107,7 +2107,6 @@ textarea.w-select {
     display: none;
     cursor: pointer;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -2370,9 +2369,11 @@ textarea.w-select {
     -ms-grid-column-span: 1;
     grid-column-end: 2;
     -ms-grid-column: 1;
+    grid-column: 1;
     grid-column-start: 1;
     -ms-grid-row-span: 1;
     grid-row-end: 2;
+    grid-row: 1;
     -ms-grid-row: 1;
     grid-row-start: 1;
 }
@@ -2382,10 +2383,12 @@ textarea.w-select {
     display: table;
     -ms-grid-column-span: 1;
     grid-column-end: 2;
+    grid-column: 1;
     -ms-grid-column: 1;
     grid-column-start: 1;
     -ms-grid-row-span: 1;
     grid-row-end: 2;
+    grid-row: 1;
     -ms-grid-row: 1;
     grid-row-start: 1;
     clear: both;
