--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5019,6 +5019,7 @@ blockquote {
 }
 
 .pricing-title {
+    color: #905ee6;
     margin-bottom: 15px;
     font-size: 20px;
     line-height: 21px;
