--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4765,22 +4765,26 @@ blockquote {
 }
 
 .change-this-image.team-3 {
-    background-image: url("https://www.digipants.com/assets/Tushaar.png");
+    background-image: url("https://www.digipants.com/assets/Aman.png");
     background-size: contain;
 }
 
 .change-this-image.team-4 {
-    background-image: url("https://www.digipants.com/assets/Atharv.png");
+    background-image: url("https://www.digipants.com/assets/Kshama.png");
     background-size: contain;
 }
 
 .change-this-image.team-5 {
-    background-image: url("https://www.digipants.com/assets/Harshita.png");
+    background-image: url("https://www.digipants.com/assets/Himanshu.png");
     background-size: contain;
 }
 
 .change-this-image.team-6 {
-    background-image: url("https://www.digipants.com/assets/adi.png");
+    background-image: url("https://www.digipants.com/assets/63238e717124a8c9a4c94e41/Aryan.png");
+    background-size: contain;
+}
+.change-this-image.team-6 {
+    background-image: url("https://www.digipants.com/assets/63238e717124a8c9a4c94e41/Parul.png");
     background-size: contain;
 }
 
